[package]
name = "st7789volumio"
version = "0.1.1"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
image = { version = "0.23.14" }
imageproc = { version = "0.22.0" }
chrono = "0.4"
rusttype = { version = "0.9.2" }
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = { version = "4.1.2" }
reqwest = { version = "0.11.6", default-features = false, features = ["json", "blocking", "rustls-tls"] } 

